# Projet-Prog-2023

./: README.md  readelf.c
elf_linker-1.0/: Makefile  Makefile.am  Makefile.in  Options_and_debug_example  config.status  read_header.c  read_header.h  read_relocation_table.c  read_relocation_table.h  read_sect_table.c  read_sect_table.h  read_section.c  read_section.h  read_symb_tab.c  read_symb_tab.h  readelf  readelf.c  testsProjet.sh  util.c  util.h
elf_linker-1.0/.deps/: read_header.Po  read_sect_table.Po  read_section.Po  readelf.Po  util.Po
elf_linker-1.0/Examples_fusion/: Makefile  config.status  fusion_result
elf_linker-1.0/Examples_fusion/autom4te.cache/: requests
elf_linker-1.0/New folder/: read_sect_table.c  read_sect_table.h
elf_linker-1.0/Phase_1/: Makefile  read_header.c  readelf.c
elf_linker-1.0/autom4te.cache/: requests
